Ported 508-related fix to main.csss over to main-highcontrast.css re: the footer divs.

--- a/assets/css/main-highcontrast.css
+++ b/assets/css/main-highcontrast.css
@@ -3749,6 +3749,7 @@ footer .dataExclusion {
     font-size: 14px; 
     text-align: left; 
     margin-top: 3.5em;
+    display: inline-block;
 }
 
 footer h3 {
